updated example (changed API)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <h1>Przykład konsumpcji API</h1>
-        <p>Ta strona pokazuje, jak może przebiegać proces łączenia się z API udostępnianego przez serwer gry.</p>
+        <p>Ta strona pokazuje, jak może przebiegać proces łączenia się z API udostępnianego przez serwer gry - jest to tylko zarys koncepcyjny.</p>
 
         <hr>
 
@@ -32,37 +32,57 @@
         <script type="text/javascript">
             $(document).ready(function() {
 
-                $.ajax({
-                    dataType: "json",
-                    url: "/api/user/is_logged"
-                })
-                .done(function(data) {
-                    if (data["is_logged"])
-                    {
-                        $("#is_logged").html("zalogowany");
-                        $("#home").hide();
-                        $("#logout").show();
-                    }
-                    else
-                    {
-                        $("#is_logged").html("niezalogowany");
-                        $("#home").show();
-                        $("#logout").hide();
-                    }
-                });
+                // zgodnie z metodologią REST do obsługi danych gracza
+                // bedzie potrzebnego jego ID
+                var player_id = null;
 
-                $.ajax({
-                    dataType: "json",
-                    url: "/api/user/details"
-                })
-                .done(function(data) {
-                    $("#whoiam").html( data["first_name"] + " " + data["last_name"] );
-                })
-                .fail(function() {
-                    // tutaj API zwroci blad: nieautoryzowany dostep do danych
-                    $("#whoiam").html( "N/A" );
-                });
+                function load_player()
+                {
+                    $.ajax({
+                        dataType: "json",
+                        url: "/api/player/is_logged"
+                    })
+                    .done(function(data) {
+                        if (data["is_logged"])
+                        {
+                            $("#is_logged").html("zalogowany");
+                            $("#home").hide();
+                            $("#logout").show();
 
+                            player_id = data["player_id"];
+                        }
+                        else
+                        {
+                            $("#is_logged").html("niezalogowany");
+                            $("#home").show();
+                            $("#logout").hide();
+                        }
+
+                        load_player_info();
+                    });
+                }
+
+                function load_player_info()
+                {
+                    if(player_id == null)
+                    {
+                        $("#whoiam").html( "N/A" );
+                        return;
+                    }
+
+                    $.ajax({
+                        dataType: "json",
+                        url: "/api/player/"+player_id
+                    })
+                    .done(function(data) {
+                        $("#whoiam").html( data["name"] );
+                    });
+                }
+
+                load_player();
+
+                // alternatywny sposob (byc moze lepszy) to biblioteka core-api
+                // przyklady na http://51.255.167.114/docs/ po wybraniu Source Code w menu
             });
         </script>
     </body>
