dodanie wyświetlania struktur, pobieranie danych z api (wstępna wersja )

--- a/src/index.html
+++ b/src/index.html
@@ -37,14 +37,15 @@
 
 
 <div id="onionCounter"><!-- sekcja na licznik -->
-	0 cebuli
+	0 cebul
 </div>
 <div> <!-- sekcja na cebule i ulepszenia -->
 	<div id="onionContainer" style="display: inline-block"> <!-- cebula -->
 		<img id="mainOnion" src="http://www.pngmart.com/files/1/Onion-Vector-PNG-Clipart.png" />
 	</div>
 	<div style="display: inline-block"> <!-- ulepszenia -->
-		ulepszenia
+		Struktury:<br/>
+		<app-structure>aaa</app-structure>
 	</div>
 </div>
 <div> <!-- sekcja na osiagniecia -->
