--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,11 @@
 <div id="onionCounter"><!-- sekcja na licznik -->
 	0 cebul
 </div>
-<div> <!-- sekcja na cebule i ulepszenia -->
+<div style="position: relative; width: 100%"> <!-- sekcja na cebule i ulepszenia -->
 	<div id="onionContainer" style="display: inline-block"> <!-- cebula -->
 		<img id="mainOnion" src="http://www.pngmart.com/files/1/Onion-Vector-PNG-Clipart.png" />
 	</div>
-	<div style="display: inline-block"> <!-- ulepszenia -->
+	<div id="sctructureContainer" style="display: inline-block"> <!-- ulepszenia -->
 		Struktury:<br/>
 		<app-structure>aaa</app-structure>
 	</div>
