--- a/src/index.html
+++ b/src/index.html
@@ -1,57 +1,93 @@
-<!doctype html>
+<html lang="pl-PL">
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Cebula Kliker</title>
   <base href="/">
-
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <title>Cebula Kliker</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style type="text/css">
+	body
+	{
+		background-color: black;
+		width: 100%;
+	}	
+   </style>
 </head>
 <body>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="index.js"></script>
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+ 	 <script src="js/index.js"></script>
 
 <center>
-
+ <!-- miejsce na reklame -->
 <div>
 	<img src="http://www.natureexports.co.in/images/red-onion-banner.jpg" width="520" height="125" />
-</div> <!-- miejsce na reklame -->
-<hr/>
-<div id="loginContainer"> <!-- obsluga zalogowania -->
-	<table>
-            <tr>
-                <td>Status zalogowania:</td>
-                <td id="is_logged"></td>
-            </tr>
-
-            <tr>
-                <td>Imie i nazwisko:</td>
-                <td id="whoiam"></td>
-            </tr>
-        </table><br/>
-
-        <a id="home" href="/">Strona główna</a>
-        <a id="logout" href="/logout">Wyloguj się</a>
 </div>
 
-
-<div id="onionCounter"><!-- sekcja na licznik -->
-	0 cebul
+<!--pasek nawigacyjny -->
+<div class="navbar navbar-inverse navbar-static-top">
+		<div class="container">
+			<div class="navbar-header">
+				<a href="#" class="navbar-brand"> Cebula Klicker Site </a>
+				
+				<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+					<span class ="icon-bar"></span>
+					<span class ="icon-bar"></span>
+					<span class ="icon-bar"></span>
+				</button>
+			</div>
+			<!-- obsluga zalogowania -->
+			<div id="loginContainer">
+				<div class="navbar-text">
+					<div id="is_logged">Status zalogowania:</div> 
+				</div>
+				<div class="navbar-text">
+					<div id="whoiam">Imie i nazwisko:</div>
+				</div>
+			</div>
+			<div class="collapse navbar-collapse navHeaderCollapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li class="active"><a href ="index.html">Strona główna</a></li>
+					<li><a href ="#">Wyloguj się</a></li>
+				</ul>
+			</div>
+		</div>
 </div>
-<div style="position: relative; width: 100%"> <!-- sekcja na cebule i ulepszenia -->
-	<div id="onionContainer" style="display: inline-block"> <!-- cebula -->
-		<img id="mainOnion" src="http://www.pngmart.com/files/1/Onion-Vector-PNG-Clipart.png" />
+<!-- sekcja na cebule i ulepszenia -->
+<div class="container">
+	<!-- sekcja na licznik -->
+	<div class="row">
+		<div id="onionCounter">
+			0 cebul
+		</div>
 	</div>
-	<div id="sctructureContainer" style="display: inline-block"> <!-- ulepszenia -->
-		Struktury:<br/>
-		<app-structure>aaa</app-structure>
+	<!-- cebula -->
+	<div class="row">
+		<div id="onionContainer" style="display: inline-block">
+			<img id="mainOnion" src="http://www.pngmart.com/files/1/Onion-Vector-PNG-Clipart.png" />
+		</div>
 	</div>
+	<!-- ulepszenia i osiagniecia -->
+	<div class="row">
+		<!-- ulepszenia -->
+		<div class="col-sm-6">
+				<div id="sctructureContainer" style="display: inline-block"> 
+					Struktury:<br/>
+					<app-structure>aaa</app-structure>
+				</div>
+			
+		</div>
+		<!-- sekcja na osiagniecia -->
+		<div class="col-sm-6">
+			<div> 
+				achievementy
+			</div>
+		</div>
+	</div>
+	
 </div>
-<div> <!-- sekcja na osiagniecia -->
-	achievementy
-</div>
-
 <app-root>Loading...</app-root>
 </center>
 </body>
