--- a/src/index.html
+++ b/src/index.html
@@ -65,20 +65,21 @@
 	</div>
 	<!-- cebula -->
 	<div class="row">
-		<div id="onionContainer" style="display: inline-block">
+		<div id="onionContainer" class="col-md-6" >
 			<img id="mainOnion" src="http://www.pngmart.com/files/1/Onion-Vector-PNG-Clipart.png" />
 		</div>
-	</div>
-	<!-- ulepszenia i osiagniecia -->
-	<div class="row">
 		<!-- ulepszenia -->
-		<div class="col-sm-6">
-				<div id="sctructureContainer" style="display: inline-block"> 
+		<div class="col-sm-2">
+				<div id="sctructureContainer"> 
 					Struktury:<br/>
 					<app-structure>aaa</app-structure>
 				</div>
 			
 		</div>
+	</div>
+	<!-- ulepszenia i osiagniecia -->
+	<div class="row">
+		
 		<!-- sekcja na osiagniecia -->
 		<div class="col-sm-6">
 			<div> 
