--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,6 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <title>Cebula Kliker</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <style type="text/css">
-	body
-	{
-		background-color: black;
-		width: 100%;
-	}	
-   </style>
 </head>
 <body>
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -27,7 +20,7 @@
 </div>
 
 <!--pasek nawigacyjny -->
-<div class="navbar navbar-inverse navbar-static-top">
+<div class="navbar navbar-default navbar-static-top>
 		<div class="container">
 			<div class="navbar-header">
 				<a href="#" class="navbar-brand"> Cebula Klicker Site </a>
@@ -66,7 +59,9 @@
 	<!-- cebula -->
 	<div class="row">
 		<div id="onionContainer" class="col-md-6" >
-			<img id="mainOnion" src="http://www.pngmart.com/files/1/Onion-Vector-PNG-Clipart.png" />
+			<img id="mainOnion" src="assets/onion_glow.svg" />
+			<img id="radialStripes1" src="assets/radial_stripes.svg" />
+			<img id="radialStripes2" src="assets/radial_stripes.svg" />
 		</div>
 		<!-- ulepszenia -->
 		<div class="col-sm-2">
