--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
  	 <script src="js/index.js"></script>
 
+<div id="grassContainer">
+
+</div>	 
 <center>
  <!-- miejsce na reklame -->
 <div>
@@ -50,27 +53,29 @@
 </div>
 <!-- sekcja na cebule i ulepszenia -->
 <div class="container">
-	<!-- sekcja na licznik -->
-	<div class="row">
-		<div id="onionCounter">
-			0 cebul
-		</div>
-	</div>
+	
 	<!-- cebula -->
 	<div class="row">
 		<div id="onionContainer" class="col-md-6" >
 			<img id="mainOnion" src="assets/onion_glow.svg" />
 			<img id="radialStripes1" src="assets/radial_stripes.svg" />
 			<img id="radialStripes2" src="assets/radial_stripes.svg" />
+			<div id="onionCounter">
+			0 cebul
+			</div>
 		</div>
 		<!-- ulepszenia -->
-		<div class="col-sm-2">
+		<!--<div class="col-sm-2">
 				<div id="sctructureContainer"> 
 					Struktury:<br/>
 					<app-structure>aaa</app-structure>
 				</div>
 			
-		</div>
+		</div>-->
+	</div>
+	<!-- sekcja na licznik -->
+	<div class="row">
+		
 	</div>
 	<!-- ulepszenia i osiagniecia -->
 	<div class="row">
