przeniesienie stanu struktur do zewnętrznego serwisu, usunięcie testowego componentu

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
 					<span class ="icon-bar"></span>
 				</button>
 			</div>
-			<!-- obsluga zalogowania -->
+			
 			<div id="loginContainer">
 				<div class="navbar-text">
 					<div id="is_logged">Status zalogowania:</div> 
@@ -56,7 +56,7 @@
 	
 	<!-- cebula -->
 	<div class="row">
-		<div id="onionContainer" class="col-md-6" >
+		<div id="onionContainer" class="col-md-6" style="margin-left: 275px" >
 			<img id="mainOnion" src="assets/onion_glow.svg" />
 			<img id="radialStripes1" src="assets/radial_stripes.svg" />
 			<img id="radialStripes2" src="assets/radial_stripes.svg" />
@@ -65,13 +65,13 @@
 			</div>
 		</div>
 		<!-- ulepszenia -->
-		<!--<div class="col-sm-2">
+		<div class="col-sm-2">
 				<div id="sctructureContainer"> 
 					Struktury:<br/>
 					<app-structure>aaa</app-structure>
 				</div>
 			
-		</div>-->
+		</div>
 	</div>
 	<!-- sekcja na licznik -->
 	<div class="row">
@@ -82,14 +82,13 @@
 		
 		<!-- sekcja na osiagniecia -->
 		<div class="col-sm-6">
-			<div> 
+			<!--<div> 
 				achievementy
-			</div>
+			</div>-->
 		</div>
 	</div>
 	
 </div>
-<app-root>Loading...</app-root>
 </center>
 </body>
 </html>
