przeniesienie obługi cebuli i licznika z jquerry do angulara

--- a/src/index.html
+++ b/src/index.html
@@ -56,13 +56,10 @@
 	
 	<!-- cebula -->
 	<div class="row">
-		<div id="onionContainer" class="col-md-6" style="margin-left: 275px" >
-			<img id="mainOnion" src="assets/onion_glow.svg" />
-			<img id="radialStripes1" src="assets/radial_stripes.svg" />
-			<img id="radialStripes2" src="assets/radial_stripes.svg" />
-			<div id="onionCounter">
-			0 cebul
-			</div>
+		
+		<div id="onionContainer" class="col-md-6" >
+			<app-onion></app-onion>
+			
 		</div>
 		<!-- ulepszenia -->
 		<div class="col-sm-2">
