drobne poprawki do paska

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 	<div class="navbar navbar-default navbar-static-top">
 			<div class="container">
 				<div class="navbar-header">
-					<a href="#" class="navbar-brand"> Cebula Klicker Site </a>
+					<a href="#" class="navbar-brand"> Cebula Kliker </a>
 					
 					<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 						<span class ="icon-bar"></span>
@@ -37,15 +37,15 @@
 				<div class="collapse navbar-collapse navHeaderCollapse">
 					<ul class="nav navbar-nav navbar-left">
 						<div class="navbar-text">
-							<div id="is_logged">Status zalogowania:</div> 
+							<div id="is_logged">Status:</div> 
 						</div>
 						<div class="navbar-text">
-							<div id="whoiam">Imie i nazwisko:</div>
+							<div id="whoiam">Zalogowany jako:</div>
 						</div>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li class="active"><a href ="index.html">Strona główna</a></li>
-						<li><a href ="#">Wyloguj się</a></li>
+						<li class="active"><a href ="landing_page/index.html">Home</a></li>
+						<li><a href ="#">Wyloguj</a></li>
 					</ul>
 				</div>
 			</div>
@@ -64,7 +64,7 @@
 			<!-- ulepszenia -->
 			<div class="col-sm-2">
 					<div id="sctructureContainer"> 
-						Struktury:<br/>
+						Structures:<br/>
 						<app-structure>aaa</app-structure>
 					</div>
 				
