lista rozwijana do ulepszen wersja 1

--- a/src/index.html
+++ b/src/index.html
@@ -63,11 +63,37 @@
 			</div>
 			<!-- ulepszenia -->
 			<div class="col-sm-2">
-					<div id="sctructureContainer"> 
-						Structures:<br/>
-						<app-structure>aaa</app-structure>
+					<div class="panel-group">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+							<h4 class="panel-title">
+								<a data-toggle="collapse" href="#collapse1">Ulepszenia</a>
+							</h4>
+							</div>
+							<div id="collapse1" class="panel-collapse collapse">
+								<div class="upgrade1">		
+									<app-structure>Ulepszenie</app-structure>
+								</div>
+							</div>
+						</div>
 					</div>
-				
+					<div class="panel-group">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+							<h4 class="panel-title">
+								<a data-toggle="collapse" href="#collapse2">Achievementy</a>
+							</h4>
+							</div>
+							<div id="collapse2" class="panel-collapse collapse">
+								<div class="upgrade1">		
+										Achievement
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+					
 			</div>
 		</div>
 		<!-- sekcja na licznik -->
