--- a/src/index.html
+++ b/src/index.html
@@ -67,12 +67,12 @@
 						<div class="panel panel-default">
 							<div class="panel-heading">
 							<h4 class="panel-title">
-								<a data-toggle="collapse" href="#collapse1">Ulepszenia</a>
+								<a data-toggle="collapse" href="#collapse1">Struktury</a>
 							</h4>
 							</div>
-							<div id="collapse1" class="panel-collapse collapse">
-								<div class="upgrade1">		
-									<app-structure>Ulepszenie</app-structure>
+							<div id="collapse1" class="panel-collapse collapse in">
+								<div class="struct1">		
+									<app-structure>Struktury</app-structure>
 								</div>
 							</div>
 						</div>
@@ -81,12 +81,12 @@
 						<div class="panel panel-default">
 							<div class="panel-heading">
 							<h4 class="panel-title">
-								<a data-toggle="collapse" href="#collapse2">Achievementy</a>
+								<a data-toggle="collapse" href="#collapse2">Ulepszenia</a>
 							</h4>
 							</div>
-							<div id="collapse2" class="panel-collapse collapse">
+							<div id="collapse2" class="panel-collapse collapse in">
 								<div class="upgrade1">		
-										Achievement
+										Ulepszenie 1 
 								</div>
 							</div>
 						</div>
