--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
 							</div>
 							<div id="collapse2" class="panel-collapse collapse in">
 								<div class="upgrade1">		
-										Ulepszenie 1 
+										<app-upgrade>Ulepszenia</app-upgrade>
 								</div>
 							</div>
 						</div>
