--- a/src/index.html
+++ b/src/index.html
@@ -82,14 +82,14 @@
       <div class="col-sm-2">
         <div class="panel-group">
           <div class="panel panel-default">
-            <div class="panel-heading">
-              <h4 class="panel-title">
-                <a data-toggle="collapse" href="#collapse1">Struktury</a>
-              </h4>
+            <div class="panel-heading" >
+               <a data-toggle="collapse" href="#collapse1"> 
+                <h4 class="panel-title">Struktury</h4>
+               </a>
             </div>
             <div id="collapse1" class="panel-collapse collapse in">
               <div class="struct1">
-                <app-structure>Struktury</app-structure>
+                <app-structure></app-structure>
               </div>
             </div>
           </div>
@@ -97,13 +97,13 @@
         <div class="panel-group">
           <div class="panel panel-default">
             <div class="panel-heading">
-              <h4 class="panel-title">
-                <a data-toggle="collapse" href="#collapse2">Ulepszenia</a>
-              </h4>
+              <a data-toggle="collapse" href="#collapse2">
+                <h4 class="panel-title">Ulepszenia</h4>
+              </a>
             </div>
             <div id="collapse2" class="panel-collapse collapse in">
               <div class="upgrade1">
-                <app-upgrade>Ulepszenia</app-upgrade>
+                <app-upgrade></app-upgrade>
               </div>
             </div>
           </div>
