wygląd struktur - part 1

--- a/src/index.html
+++ b/src/index.html
@@ -87,12 +87,8 @@
                </a>
             </div>
             <div id="collapse1" class="panel-collapse collapse in">
-              <div class="body-layout">
-              </div>
               <div class="panel-body">
-            
-                <app-structure></app-structure>
-               
+					<app-structure></app-structure></td>
               </div>
             </div>
           </div>
