Kolejna partia poprawek do grafiki struktur/ulepszeń

--- a/src/index.html
+++ b/src/index.html
@@ -81,14 +81,14 @@
       <div class="col-sm-2">
         <div class="panel-group">
           <div class="panel panel-default">
-            <div class="panel-heading" >
+            <div class="panel-heading">
                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1"> 
                 <h4 class="panel-title">Struktury</h4>
                </a>
             </div>
             <div id="collapse1" class="panel-collapse collapse in">
-              <div class="panel-body">
-					<app-structure></app-structure></td>
+              <div class="panel-body"  style="border-style: none">
+					<app-structure></app-structure>
               </div>
             </div>
           </div>
