Resizowanie zrobione poprawnie ( w końcu )

--- a/src/index.html
+++ b/src/index.html
@@ -73,12 +73,12 @@
     <!-- cebula -->
     <div class="row">
 
-      <div id="onionContainer" class="col-md-6">
+      <div class="col-md-6" id="onionContainer">
         <app-onion></app-onion>
 
       </div>
       <!-- ulepszenia -->
-      <div class="col-sm-2">
+      <div class="col-md-6" id="uppContainer">
         <div class="panel-group">
           <div class="panel panel-default">
             <div class="panel-heading">
