--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
           <div class="panel panel-default">
             <div class="panel-heading">
                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1"> 
-                <h4 class="panel-title">Struktury</h4>
+                <h4 class="panel-title"><div id="struktury_title"></div></h4>
                </a>
             </div>
             <div id="collapse1" class="panel-collapse collapse in">
@@ -97,7 +97,7 @@
           <div class="panel panel-default">
             <div class="panel-heading">
               <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-                <h4 class="panel-title">Ulepszenia</h4>
+                <h4 class="panel-title"><div id="ulepszenia_title"></div></h4>
               </a>
             </div>
             <div id="collapse2" class="panel-collapse collapse in">
