stworzenie komponentu do statystyk, zaczęcie obramowania okna

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,10 @@
           crossorigin="anonymous"></script>
 </head>
 <body>
-<div id="grassContainer">
 
-</div>
+<div id="grassContainer"></div>
+<div id="statisticsContainer"><app-statistics></app-statistics></div>
+
 <center>
   <!-- miejsce na reklame -->
   <div>
