--- a/src/landing_page/index.html
+++ b/src/landing_page/index.html
@@ -2,113 +2,38 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
-    <title>ONION Clicker!</title>
-    <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <title>Cebula Kliker</title>
+
 </head>
  
 <body>
-<!--
-	<header>
-		<div class="wrapper">
-		    <h1>ONION Clicker!<span class="color"></span></h1>
-		        <nav>
-			    <ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Portfolio</a></li>
-				<li><a href="#">Contact</a></li>
-				<li><a href="#">Blog</a></li>
-			    </ul>
-		        </nav>
-		</div>
-	</header>
--->	
-	<div id="hero-image">
-		<div class="wrapper">
-                    <h2><strong>Może cebuli</strong><br/>
-		                        by się poklikało?</h2>
-		    <a href="#" class="button-1">No dalej!</a>                    			
-		</div>
-	</div>
-	
-	<div id="features">
-		<div class="wrapper">
-			<ul>
-				<li class="feature-1">
-				    <h4>Drewniane kalesony</h4>
-				        <p>By siedzenie było bezpieczne.</p>
-			    </li>
-			    <li class="feature-2">
-				    <h4>Pancerne gumioki</h4>
-				        <p>By wszędzie dało radę postawić stopę.</p>
-			    </li>
-			    <li class="feature-3">
-				    <h4>Azbestowe gacie.</h4>
-				        <p>Nikt takich nie ma.</p>
-			    </li>
-			<div class="clear"></div>
-			</ul>
-		</div>
-	</div>
-	
-	<div id="primary-content">
-		<div class="wrapper">
-			<article>
-			    <h3>Zdobądź je wszystkie.</h3>
-			        <p>Podejmiesz wyzwanie?</p>
-			        <a href="#"><img src="images/moustache.jpg" alt="video placeholder" /></a>
-		    </article>
-		</div>
-	</div>
-	
-	<div id="secondary-content">
-		<div class="wrapper">
-			<article style="background-image: url('images/Winter_Onion.png');">
-			    <div class="overlay">
-			 	    <h4>Zostań mistrzem</h4>
-				        <p><small>Like a boss</small></p>
-				        <a href="#" class="more-link">Sprawdź</a>
-			    </div>
-		    </article>
-		    <article style="background-image: url('images/no_helmet.png');">
-			    <div class="overlay">
-				    <h4>Lub płacz</h4>
-				        <p><small>Chlip chlip...</small></p>
-				        <a href="#" class="more-link">Spróbuj</a>
-			    </div>
-		   </article><div class="clear"></div>
-		</div>
-	</div>
-	
-	<div id="cta">
-		<div class="wrapper">
-                    <h3>No to jak?</h3>
-		                <p>Jedziemy z cebulą?</p>
-			            <a href="#"><img src="images/Sarge_2.png" alt="Cebule" /></a>
-		                <a href="#" class="button-2">Lutuj!</a>
-		</div>
-	</div>
-	
 
-	<footer>
-		<div class="wrapper">
-			<div id="footer-info"></div>
-                            <p>Copyleft Onion Software Inc. No rights reserved.</p>
-			                <p><a href="#">Terms of Service</a> I <a href="#">Privacy</a></p>
-			<div id="footer-links">
-		        <ul>
-				    <li><h5>Zespół</h5></li>
-				        <li><a href="#">O nas</a></li>
-			    </ul>
-		    </div>
-		    <div class="clear"></div>
-		</div>
-	</footer>
-    
+<div id="grassContainer"></div>
+<div id="alertContainer">
+	<div id="topFrame" class="horizontalFrame"></div>
+	<div id="bottomFrame" class="horizontalFrame"></div>
+	<div id="leftFrame" class="verticalFrame"></div>
+	<div id="rightFrame" class="verticalFrame"></div>
+	<div id="leftTopCorner" class="corner"></div>
+	<div id="rightTopCorner" class="corner"></div>
+	<div id="leftBottomCorner" class="corner"></div>
+	<div id="rightBottomCorner" class="corner"></div>
+	<div id="alertContent">
+		Strona do prawidłowego działania używa wirtualnej cebuli. Możesz określić warunki przechowywania lub dostępu do onions w ustawieniach twojej przeglądarki.
+		<div id="closeButton" onclick='document.getElementById("alertContainer").style.display = "none"'></div>
+	</div>
+</div>
+	
+<div id="mainOnionContainer" >
+	<div id="mainOnion"></div>
+	<div id="radialStripes1"></div>
+	<div id="radialStripes2"></div>
+	<div id="gameName"></div>
+	<div id="loginButtonContainer">
+		<a href="api/oauth/login/facebook"><div id="loginButton"> </div></a>
+	</div>
+</div>
 </body>
 </html>
 
