poprawki w wyglądzie strony głównej i w strukturach

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <div id="grassContainer"></div>
-<div id="statisticsContainer"><app-statistics></app-statistics></div>
+<!-- <div id="statisticsContainer"><app-statistics></app-statistics></div> -->
 
 <center>
   <!-- miejsce na reklame -->
@@ -84,7 +84,7 @@
           <div class="panel panel-default">
             <div class="panel-heading">
                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1"> 
-                <h4 class="panel-title"><div id="struktury_title"></div></h4>
+                <h4 class="panel-title"><img id="struktury_title" src="assets/struktury.svg" class="noselect"/></h4>
                </a>
             </div>
             <div id="collapse1" class="panel-collapse collapse in">
@@ -98,7 +98,7 @@
           <div class="panel panel-default">
             <div class="panel-heading">
               <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-                <h4 class="panel-title"><div id="ulepszenia_title"></div></h4>
+                <h4 class="panel-title"><img id="ulepszenia_title" src="assets/ulepszenia.svg" class="noselect"/></h4>
               </a>
             </div>
             <div id="collapse2" class="panel-collapse collapse in">
