--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <div id="grassContainer"></div>
-<!-- <div id="statisticsContainer"><app-statistics></app-statistics></div> -->
+<div id="statisticsContainer"><app-statistics></app-statistics></div>
 
 <center>
   <!-- miejsce na reklame -->
