--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,7 @@
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
+			<li><a href="#" id="statisticsBtn">Statystyki</a></li>
           <li class="active"><a href="landing_page/index.html">Home</a></li>
           <li><a href="#">Wyloguj</a></li>
         </ul>
