--- a/src/landing_page/index.html
+++ b/src/landing_page/index.html
@@ -7,7 +7,19 @@
 
 </head>
  
-<body>
+<body onLoad="init()">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript">
+
+function init()
+{
+	$("body").on('keydown', function(e){ if (e.keyCode == 9)  e.preventDefault() });
+}
+
+
+
+</script>
 
 <img style="display: none" src="assets/ok_hover.svg" />
 <img style="display: none" src="assets/zagraj_hover.svg" />
