--- a/src/index.html
+++ b/src/index.html
@@ -63,8 +63,8 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
 			<li><a href="#" id="statisticsBtn">Statystyki</a></li>
-          <li class="active"><a href="landing_page/index.html">Home</a></li>
-          <li><a href="#">Wyloguj</a></li>
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/api/logout">Wyloguj</a></li>
         </ul>
       </div>
   </div>
