dodanie serwisu od dźwięków

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
 <div id="grassContainer"></div>
 <div id="statisticsContainer"><app-statistics></app-statistics></div>
-<div id="achievementsContainer"><app-achievements></app-achievements></div>
+<!-- <div id="achievementsContainer"><app-achievements></app-achievements></div> -->
 
 <center>
 <div class="container">
