--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <div id="bodypaint"> </div>
     <div id="grassContainer"></div> 
     <div id="statisticsContainer"><app-statistics></app-statistics></div>
-    <div id="achievementsContainer"><app-achievements></app-achievements></div>
+  <!--  <div id="achievementsContainer"><app-achievements></app-achievements></div> -->
 
 
     <center>
