Usunięcie zmiany kursora na tekstowy wszędzie gdzie ten problem występował

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,6 @@
     <div id="statisticsContainer"><app-statistics></app-statistics></div>
   <!--  <div id="achievementsContainer"><app-achievements></app-achievements></div> -->
 
-
     <center>
     <div class="container">
       <!-- miejsce na reklame -->
@@ -57,10 +56,10 @@
           <div class="collapse navbar-collapse navHeaderCollapse">
             <ul class="nav navbar-nav navbar-left">
               <li class="navbar-text">
-                <div id="is_logged">Status:</div>
+                <div id="is_logged" class="noIbar">Status:</div>
               </li>
               <li class="navbar-text">
-                <div id="whoiam">Zalogowany jako:</div>
+                <div id="whoiam" class="noIbar">Zalogowany jako:</div>
               </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
