centrowanie licznika cebuli, obsługa dźwięków, dodanie więcej przyrostków

--- a/src/index.html
+++ b/src/index.html
@@ -63,9 +63,10 @@
               </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" id="statisticsBtn">Statystyki</a></li>
-              <li class="active"><a href="/">Home</a></li>
-              <li><a href="/api/logout">Wyloguj</a></li>
+				<li><a href="#" id="soundsBtn">Dźwięki: Wł</a></li>
+				<li><a href="#" id="statisticsBtn">Statystyki</a></li>
+				<li><a href="/">Home</a></li>
+				<li><a href="/api/logout">Wyloguj</a></li>
             </ul>
           </div>
       </div>
