zmiana layoutu ulepszeń, zmiana ikonek do dźwięku

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
               </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-				<li><a href="#" id="soundsBtn">Dźwięki: Wł</a></li>
+				<li><a id="sndBtnA" href="#"><img id="sndOn" class="soundsBtn" src="/assets/sound_on.svg"/><img id="sndOff" class="soundsBtn" src="/assets/sound_off.svg"/></a></li>
 				<li><a href="#" id="statisticsBtn">Statystyki</a></li>
 				<li><a href="/">Home</a></li>
 				<li><a href="/api/logout">Wyloguj</a></li>
