--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,11 @@
 <div id="bodypaint"></div>
 <div id="grassContainer"></div>
 <div id="statisticsContainer">
-  <app-statistics></app-statistics>
+	<app-statistics></app-statistics>
 </div>
-<!--  <div id="achievementsContainer"><app-achievements></app-achievements></div> -->
+<div id="achievementsContainer">
+	<app-achievements></app-achievements>
+</div>
 
 <center>
   <div class="container">
@@ -66,6 +68,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
 				<li><a id="sndBtnA" href="#"><img id="sndOn" class="soundsBtn" src="assets/sound_on.svg"/><img id="sndOff" class="soundsBtn" src="assets/sound_off.svg"/></a></li>
+				<li><a href="#" id="achievementsBtn">Osiagniecia</a></li>
 				<li><a href="#" id="statisticsBtn">Statystyki</a></li>
 				<li><a href="/">Home</a></li>
 				<li><a href="/api/logout">Wyloguj</a></li>
