--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,13 @@
 <div id="achievementsContainer">
 	<app-achievements></app-achievements>
 </div>
+<div id="newAchievement">
+	<div>Zdobyto nowe osiągnięcie</div>
+	<div>
+		<img id="newAchIcon" />
+		<div id="newAchName"></div>
+	</div>
+</div>
 
 <center>
   <div class="container">
