Wygląd okienka otrzymania achievement'u / zmiana wyglądu scrollbara w strukturach i ulepszeniach

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,14 @@
 	<app-achievements></app-achievements>
 </div>
 <div id="newAchievement">
+  <div id="topFrame" class="horizontalFrame"></div>
+  <div id="bottomFrame" class="horizontalFrame"></div>
+  <div id="leftFrame" class="verticalFrame"></div>
+  <div id="rightFrame" class="verticalFrame"></div>
+  <div id="leftTopCorner" class="corner"></div>
+  <div id="rightTopCorner" class="corner"></div>
+  <div id="leftBottomCorner" class="corner"></div>
+  <div id="rightBottomCorner" class="corner"></div>
 	<div>Zdobyto nowe osiągnięcie</div>
 	<div>
 		<img id="newAchIcon" />
