nowy wygląd okna dla zdobytego achievementa, zmiany na liście achievementów

--- a/src/index.html
+++ b/src/index.html
@@ -31,10 +31,12 @@
   <div id="rightTopCorner" class="corner"></div>
   <div id="leftBottomCorner" class="corner"></div>
   <div id="rightBottomCorner" class="corner"></div>
-	<div>Zdobyto nowe osiągnięcie</div>
 	<div>
 		<img id="newAchIcon" />
-		<div id="newAchName"></div>
+		<div id="newAchName">
+			<div id="newAchInfo">Zdobyto nowe osiągnięcie</div>
+			<div id="newAchTitle">???????????????????????????????????????????????</div>
+		</div>
 	</div>
 </div>
 
