--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
           <div class="collapse navbar-collapse navHeaderCollapse">
             <ul class="nav navbar-nav navbar-right">
               <li><a id="sndBtnA" href="#"><img id="sndOn" class="soundsBtn" src="assets/sound_on.svg"/><img id="sndOff" class="soundsBtn" src="assets/sound_off.svg"/></a></li>
-              <li><a href="#" id="achievementsBtn"></a></li>
+              <li><a href="#" id="achievementsBtn"><div id="achievementsBtnImg"></div></a></li>
               <li><a href="#" id="statisticsBtn">Statystyki</a></li>
 	      			<li><a href="/api/logout" id="logoutBtn">Wyloguj</a></li>
             </ul>
