poprawienie nagłówków w navbarze

--- a/src/index.html
+++ b/src/index.html
@@ -76,10 +76,10 @@
       </div>
           <div class="collapse navbar-collapse navHeaderCollapse">
             <ul class="nav navbar-nav navbar-right">
-              <li><a id="sndBtnA" href="#"><img id="sndOn" class="soundsBtn" src="assets/sound_on.svg"/><img id="sndOff" class="soundsBtn" src="assets/sound_off.svg"/></a></li>
-              <li><a href="#" id="achievementsBtn"><div id="achievementsBtnImg"></div></a></li>
-              <li><a href="#" id="statisticsBtn">Statystyki</a></li>
-	      			<li><a href="/api/logout" id="logoutBtn">Wyloguj</a></li>
+				<li><a id="sndBtnA" href="#"><img id="sndOn" class="soundsBtn" src="assets/sound_on.svg"/><img id="sndOff" class="soundsBtn" src="assets/sound_off.svg"/></a></li>
+				<li><a href="#" id="achievementsBtn"><div id="achievementsBtnImg"></div></a></li>
+				<li><a href="#" id="statisticsBtn"><div id="statisticsBtnImg"></div></a></li>
+				<li><a href="/api/logout" id="logoutBtn"><div id="logoutBtnImg"></div></a></li>
             </ul>
           </div>
       </div>
