--- a/src/index.html
+++ b/src/index.html
@@ -43,17 +43,17 @@
 <center>
   <div class="container">
     <!-- miejsce na reklame -->
-    <div class="advertContainer noselect">
+    <div class="aContainer noselect">
       <div id="ads" class="carousel" data-ride="carousel" data-pause="false">
         <div class="carousel-inner">
           <div class="item active">
-            <img class="carouselImg" src="../assets/ad2.png"/>
+            <img class="carouselImg" src="assets/ad2.png"/>
           </div>
           <div class="item">
-            <img class="carouselImg" src="../assets/ad3.png"/>
+            <img class="carouselImg" src="assets/ad3.png"/>
           </div>
 		  <div class="item">
-            <img class="carouselImg" src="../assets/ad4.png"/>
+            <img class="carouselImg" src="assets/ad4.png"/>
           </div>
 
           <!-- szablon reklamy
